--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body {
 
 @media only screen and (max-width: 600px) {
     .main-nav {
-        font-size: 0.6em;
+        font-size: 20px;
         padding: 0;
     }
 }
